--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "fix": "eslint --fix '**/*.ts'",
     "lint": "eslint '**/*.ts'",
     "start": "yarn tsc && bin/www",
+    "test": "jest --detectOpenHandles",
     "dev": "tsc --watch & nodemon --ignore bin/www",
     "migrate": "node-pg-migrate"
   },
   "dependencies": {
     "@types/babel__core": "7.1.10",
+    "@types/jest": "26.0.15",
     "@types/jsonwebtoken": "8.5.0",
     "@types/passport-local": "1.0.33",
     "@types/pg": "7.14.5",
@@ -24,6 +26,7 @@
     "express-session": "1.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jest": "26.6.1",
     "joi": "17.3.0",
     "jsonwebtoken": "8.5.1",
     "morgan": "~1.9.1",
@@ -33,6 +36,7 @@
     "passport-local": "1.0.0",
     "pg": "8.4.1",
     "postgres": "^2.0.0-beta.0",
+    "supertest": "6.0.0",
     "ts-node": "9.0.0",
     "uuid": "8.3.1"
   },
@@ -48,6 +52,7 @@
     "@types/node": "^14.11.2",
     "@types/nodemailer": "6.4.0",
     "@types/passport": "1.0.4",
+    "@types/supertest": "2.0.10",
     "@typescript-eslint/eslint-plugin": "4.2.0",
     "@typescript-eslint/parser": "4.2.0",
     "eslint": "7.9.0",
@@ -60,6 +65,10 @@
     "pretty-quick": "3.0.2",
     "typescript": "^4.0.3"
   },
+  "jest": {
+    "testMatch": ["***/Tests/**/*.js?(x)", "**/?(*.)(spec|test).js?(x)"]
+  },
+
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged",
