--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn
-      - run: yarn start run build --if-present
+      - run: yarn start
       - run: yarn test
         env:
           SESSION_SECRET: secret
